--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -34,11 +34,33 @@
               style="background-color:hsl(60, 100%, 50%);height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             Generalized Planning
           </h2>
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
-              style="color:red;"><b>NEW!</b></mark> Our lab titled 'SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control' has been accepted for presentation at
-            <b><i>AAAI 2025</i></b></a>. The event will take place in <b><i>Philadelphia, USA</i></b> on <b><i>February
-                25, 2025</i></b>. For more information about the lab, you can visit our <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">GitHub</a>
-          </p>
+
+          <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fbff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+            <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
+            <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
+              Our research in <strong>Generalized Planning</strong> focuses on building models and frameworks that can reason, plan, and adapt across diverse tasks. We develop transformer-based architectures for sequential decision-making, design agentic systems inspired by <em>Thinking, Fast and Slow</em>, and create knowledge engineering ontologies to support structured reasoning.
+            </p>
+          </div> <br>
+          
+          <div style="border: 3px solid black; padding: 10px; font-family: Arial, sans-serif;">
+            <p style="margin: 0 0 10px 0;">
+              <b>Quick Start</b>
+            </p>
+            <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
+              <li><mark
+                style="color:red;"><b>NEW!</b></mark> NSF-funded project on building Foundation Models for Planning-like Tasks
+                <a href="https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks" target="_blank" style="color: #007acc; text-decoration: none;">[NSF Website]</a>
+                <a href="https://ai4society.github.io/planfm/" target="_blank" style="color: #007acc; text-decoration: none;">[Project Website]</a>
+              </li>
+              <li><mark
+                style="color:red;"><b>NEW!</b></mark> Our lab titled 'SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control' has been accepted for presentation at
+              <b><i>AAAI 2025</i></b></a>. The event will take place in <b><i>Philadelphia, USA</i></b> on <b><i>February
+                  25, 2025</i></b> <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
+              <li>Choose or define a task and instantiate System 1, System 2, and Metacognition modules.</li>
+              <li>Run <code>sofai.solve()</code> to see the decision process in action.</li>
+            </ol>
+          </div>          
+
           <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Generative Models for
                 Automated Planning</b></span><br>
             <i><b>Collaborators:</b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
