Refactoring Collaborative Assistants

--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -3,18 +3,13 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <title>Collaborative Assistants</title>
-
   <meta name="author" content="Vishal Pallagani">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
 </head>
 
 <body class="container">
-
-
   <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr style="padding:0px">
@@ -35,19 +30,26 @@
             Collaborative Assistants
           </h2>
 
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
-            <mark style="color:red;"><b>NEW: </b></mark> Get a glimpse of how ElectionBots, 
-                built with SafeChat, are being used in the South Carolina Elections 2024!
-            <a href="elections_2024.html" style="text-decoration: none;">
-              <b>See a demo, compare alternative approaches, and participate in user studies.</b>
-            </a>
-            <br>
-            
-            <mark style="color:red;"><b>Code repository: </b> </mark> Use our novel SafeChat framework from our 
-            <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank" style="text-decoration: none;" >
-              <b>GitHub repository.</b>
-            </a>
-          </p>
+          <div style="border: 2px solid #28a745; border-radius: 5px; padding: 15px; background-color: #f0fff4; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+            <h4 style="margin: 0 0 5px 0; color: #28a745;">Key Idea</h4>
+            <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
+              Our work in <strong>Collaborative Assistants</strong> focuses on creating trustworthy AI systems that work synergistically with humans in sensitive domains. We develop neuro-symbolic architectures combining neural networks with symbolic reasoning, build safety-focused chatbot frameworks, and create adaptive dialog systems using planning and reinforcement learning techniques.
+            </p>
+          </div> <br>
+          
+          <div style="border: 3px solid black; padding: 10px; font-family: Arial, sans-serif;">
+            <p style="margin: 0 0 10px 0;">
+              <b>Quick Start</b>
+            </p>
+            <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
+              <li><mark style="color:red;"><b>NEW!</b></mark> See ElectionBots built with SafeChat in South Carolina Elections 2024
+                <a href="elections_2024.html" style="color: #28a745; text-decoration: none;">[Demo]</a>
+                <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank" style="color: #28a745; text-decoration: none;">[GitHub]</a>
+              </li>
+              <li><mark style="color:red;"><b>NEW!</b></mark> Our vision paper on AI for credible elections accepted at
+              <b><i>AAAI 2025</i></b></a> in <b><i>Philadelphia, USA</i></b> <a href="./presentations/AAAI-AIElectionVision-Feb2025.pdf" target="_blank">[Slides]</a></li>
+            </ol>
+          </div>
 
           <p style="text-align: justify;"><span
               style="background-color: hsl(100, 100%, 50%);"><b>SafeChat</b></span><br>
