demos thumbnail update

--- a/demos/index.html
+++ b/demos/index.html
@@ -55,11 +55,13 @@
 
         <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
-            <iframe width="300" height="200"
+            <!-- <iframe width="300" height="200"
               src="https://drive.google.com/file/d/1_5hdy4yy7Wm8hCAp4W12bq_2iL5zxEAk/preview"
               title="Demo of ElectionBot-SC" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
+              allowfullscreen></iframe> -->
+              <img src="../projects/chatbots_page/images/safechat_ui.png" alt="SafeChat"
+              style="width:280px; height:200px; border-radius: 10px;">
           </div>
           <div style="flex:1">
             <h3 class="card-text">ElectionBot-SC: A Tool to Understand and Compare Chatbot Behavior for Safe Election
