--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -68,6 +68,13 @@
             Trustworthy Group Recommendation
           </h1>
 
+          <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fbff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+            <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
+            <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
+              Our research in <strong>Trustworthy Group Recommendation</strong> ocuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
+            </p>
+          </div> <br>
+          
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><img id="myImg0"
               src="images/ultra_award.jpeg"
               alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
