--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -74,17 +74,23 @@
               Our research in <strong>Trustworthy Group Recommendation</strong> ocuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
             </p>
           </div> <br>
-          
-          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><img id="myImg0"
-              src="images/ultra_award.jpeg"
-              alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
-              style="width:100%;max-width:100px;height:50px;">
-            <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://arxiv.org/abs/2309.09404">paper</a>
-            that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
-              href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
-              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and received the <span
-              style="color:violet"><i>Deployed Application</i></span> award <i>(can be enlarged)</i>.<br><br>
 
+          <div style="border: 3px solid black; padding: 10px; font-family: Arial, sans-serif;">
+            <p style="margin: 0 0 10px 0;">
+              <b>Quick Start</b>
+            </p>
+            <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
+              <li><mark
+                style="color:red;"><b>NEW!</b></mark> Awarded the <i>Deployed Application Award</i> by AAAI-IAAI 2024 and featured in AI Magazine 2024, for our work on ULTRA, a novel AI-based system for assisting team formation when researchers respond to RFPs from funding agencies: 
+                <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank" style="color: #007acc; text-decoration: none;">[Paper]</a>
+                <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank" style="color: #007acc; text-decoration: none;">[Demo Website]</a>
+              </li>
+              <li><mark
+                style="color:red;"><b>NEW!</b></mark> See our latest work on BEACON, a personalized meal planning system to assist with making optimized meal choices over a time period, incorporating various food restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and long-term constraints to promote individual health and happines <a href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a></li>
+            </ol>
+          </div>     
+          
+  
           <div id="myModal" class="modal">
             <span class="close">&times;</span>
             <img class="modal-content" id="img01">
