--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -71,7 +71,7 @@
           <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fbff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
             <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
             <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
-              Our research in <strong>Trustworthy Group Recommendation</strong> ocuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
+              Our research in <strong>Trustworthy Group Recommendation</strong> focuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
             </p>
           </div> <br>
 
@@ -189,7 +189,7 @@
                   style="width:100%;max-width:100px;height:150px;">We introduce <span style="color:violet">ULTRA
                   (<b><u>U</u></b>niversity
                   <b><u>L</u></b>ead <b><u>T</u></b>eam
-                  <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis)</span>, an novel AI-based
+                  <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis)</span>, a novel AI-based
                 system for assisting team formation when researchers respond to RFPs from funding agencies. This is an
                 instance of the general problem of building teams when demand opportunities come periodically and
                 potential members may vary over time. The novelties of our approach are that we: (a) extract technical
