--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -38,8 +38,7 @@
           <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fbff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
             <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
             <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
-              Our research in <strong>Generalized Planning</strong> focuses on building models and frameworks that can reason, plan, and adapt across diverse tasks. We develop transformer-based architectures for sequential decision-making, design agentic systems inspired by <em>Thinking, Fast and Slow</em>, and create knowledge engineering ontologies to support structured reasoning.
-            </p>
+                Our research in <strong>Generalized Planning</strong> focuses on building models and frameworks that reason, plan, and adapt across diverse tasks. We develop transformer-based architectures for sequential decision-making, design agentic systems inspired by <em>Thinking, Fast and Slow</em>, and create knowledge engineering ontologies that support structured reasoning.            </p>
           </div> <br>
           
           <div style="border: 3px solid black; padding: 10px; font-family: Arial, sans-serif;">
@@ -48,14 +47,9 @@
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
               <li><mark
-                style="color:red;"><b>NEW!</b></mark> NSF-funded project on building Foundation Models for Planning-like Tasks
-                <a href="https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks" target="_blank" style="color: #007acc; text-decoration: none;">[NSF Website]</a>
-                <a href="https://ai4society.github.io/planfm/" target="_blank" style="color: #007acc; text-decoration: none;">[Project Website]</a>
-              </li>
-              <li><mark
-                style="color:red;"><b>NEW!</b></mark> Our lab titled 'SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control' has been accepted for presentation at
-              <b><i>AAAI 2025</i></b></a>. The event will take place in <b><i>Philadelphia, USA</i></b> on <b><i>February
-                  25, 2025</i></b> <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
+                style="color:red;"><b>NEW!</b></mark> SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control @ AAAI-25 <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
+            <li>Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls @ AAAI-24 <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">[GitHub]</a></li>
+            <li>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a></li>
             </ol>
           </div>          
 
