--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -68,7 +68,7 @@
             Trustworthy Group Recommendation
           </h1>
 
-          <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fbff; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+          <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fffe; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
             <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
             <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
               Our research in <strong>Trustworthy Group Recommendation</strong> focuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
