--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -82,7 +82,7 @@
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
               <li>See our latest work on BEACON, a personalized meal planning system to assist with making optimized meal choices over a time period, incorporating various food restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and long-term constraints to promote individual health and happines <a href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a></li>
 
-              <li>See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers respond to RFPs from funding agencies: 
+              <li>See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers respond to RFPs from funding agencies. It has been awarded the Deployed Application Award by AAAI-IAAI 2024 and featured in AI Magazine 2024: 
                 <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank" style="color: #007acc; text-decoration: none;">[Paper]</a>
                 <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank" style="color: #007acc; text-decoration: none;">[Demo Website]</a>
               </li>
