--- a/funding/index.html
+++ b/funding/index.html
@@ -46,6 +46,12 @@
                           (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
                           target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
                         <span class="tag tag-government-source">Government</span> </il>
+                    <li> VAIBHAV Fellowship <a href="https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships">announcement</a>, 2025-2028, 
+                         a prestigious recognition from Govt of India for working in summers with Prof. Hari P. Gupta at <a href="https://iitbhu.ac.in/">IIT-BHU</a> 
+                         on AI and sensors for recommending and monitoring Yoga asanas; was among 17 selected from 216 proposals competing globally. 
+                         [AI - recommendations, Health - Yoga]      
+                        <span class="tag tag-government-source">Government</span> </il>
+
                     <li> JP Morgan Chase research award, <!-- $70K, --> 2023-2025, Automatically Generating Composable Trust Certificates for Blackbox AI Systems in Finance and Assessing their Impact on End Users [AI Ethics, Testing]      
                         <span class="tag tag-fund-type">Gift</span>
                         <span class="tag tag-fund-source">Corporate</span> </il>
