--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -80,7 +80,7 @@
               <b>Quick Start</b>
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-              <li>See our latest work on <a href="http://3.133.159.191/">BEACON</a>, a personalized meal planning system to assist with making optimized meal choices over a time period, incorporating various food restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and long-term constraints to promote individual health and happines <a href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a></li>
+              <li>See our latest work on <a href="http://3.133.159.191/">BEACON</a>, a personalized meal planning system to assist with making optimized meal choices over a time period, incorporating various food restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and long-term constraints to promote individual health and happines <a href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a><a href="http://3.133.159.191/">Demo Website</a></li>
 
               <li>See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers respond to RFPs from funding agencies. It has been awarded the Deployed Application Award by AAAI-IAAI 2024 and featured in AI Magazine 2024: 
                 <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank" style="color: #007acc; text-decoration: none;">[Paper]</a>
@@ -377,7 +377,7 @@
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
                 <li>[2025]An empirical study on the use of Large Language Models (LLMs) to translate recipes into a semi-structured data format
-                  <i>Conference Poster at the National Big Data and Health Science Conference</i>
+                  <i>Conference Poster at the National Big Data and Health Science Conference</i><br>
                   <a href="./bib/Recipe-Translation-Poster.pdf" target="_blank" type="text/plain"><b>[Poster]</b></a>
                 </li>
                 <li>[2024] A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
