--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -46,15 +46,16 @@
               <b>Quick Start</b>
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-              <li><mark
-                style="color:red;"><b>NEW!</b></mark> SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control @ AAAI-25 <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
+            <li><mark
+              style="color:red;"><b>NEW!</b></mark> NSF EAGER: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications <a href="https://ai4society.github.io/planfm/" target="_blank">[Project Website]</a></li>
+            <li><mark
+              style="color:red;"><b>NEW!</b></mark> SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control @ AAAI-25 <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">[GitHub]</a></li>
             <li>Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls @ AAAI-24 <a href="https://github.com/VishalPallagani/LLMsforPlanningLab-AAAI24" target="_blank">[GitHub]</a></li>
             <li>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a></li>
             </ol>
           </div>          
 
-          <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Generative Models for
-                Automated Planning</b></span><br>
+          <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Foundation Models for Planning</b></span><br>
             <i><b>Collaborators:</b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
               <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>,
               <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav
@@ -128,6 +129,15 @@
               <a href="./bib/aaai_lab.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
             </li>
           </ul>
+          <p><i><b>Representative Patents</b></i></p>
+          <ul>
+            <li><b>P202203822US01</b> Plansformer - a transformer planner<br>
+              <i>Francesca Rossi, Lior Horesh, Vishal Pallagani, Biplav Srivastava, Andrea Loreggia</i> <br>
+            </li>
+            <li><b>USC 1702</b> Unsupervised Plan Summarization to Improve Planner Performance and Human Interpretability<br>
+              <i>Biplav Srivastava, Vishal Pallagani</i> <br>
+            </li>
+          </ul>
       <tr style="padding:0px">
         <td style="padding-left:2.5%;width:63%;vertical-align:middle">
           <img src="./images/plansformer.png" style="max-width:50%; display: block; margin: 0 auto;">
@@ -142,7 +152,6 @@
           <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Planning using Fast and
                 Slow AI Architecture</b></span><br>
             <i><b>Collaborators: </b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
-              <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>,
               <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav
                 Srivastava</a>, <a target="_blank"
                 href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Francesca.Rossi2">Francesca
@@ -192,6 +201,15 @@
               <a href="./bib/epistemic.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
             </li>
           </ul>
+          <p><i><b>Representative Activities</b></i></p>
+          <ul>
+            <li>SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control <br>
+              <i>AAAI Conference on Artificial Intelligence, 2025</i> <br>
+              <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank"><b>[Github]</b></a>
+              <a href="./bib/sofai_lab.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+            </li>
+          </ul>
+    
       <tr style="padding:0px">
         <td style="padding-left:2.5%;width:63%;vertical-align:middle">
           <img src="./images/SOFAI.png" style="max-width:40%; display: block; margin: 0 auto;">
@@ -215,6 +233,12 @@
               <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024.</i><br>
               <a href='./papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">[Paper]</a>
               <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+            </li>
+          </ul>
+          <p><i><b>Representative Patents</b></i></p>
+          <ul>
+            <li><b>USC 1649</b> Improving Planner Performance by Learning and Using Metadata of Experiences<br>
+              <i>Biplav Srivastava, Vishal Pallagani, Bharath Muppasani</i> <br>
             </li>
           </ul>
       <tr style="padding:0px">
