--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -68,10 +68,14 @@
             Trustworthy Group Recommendation
           </h1>
 
-          <div style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fffe; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
+          <div
+            style="border: 2px solid #007acc; border-radius: 5px; padding: 15px; background-color: #f9fffe; box-shadow: 2px 2px 8px rgba(0,0,0,0.1); font-family: Arial, sans-serif;">
             <h4 style="margin: 0 0 5px 0; color: #007acc;">Key Idea</h4>
             <p style="margin: 0; font-size: 14.5px; line-height: 1.6; color: #333;">
-              Our research in <strong>Trustworthy Group Recommendation</strong> focuses on developing fair, transparent, robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding opportunities.
+              Our research in <strong>Trustworthy Group Recommendation</strong> focuses on developing fair, transparent,
+              robust, and user-aligned algorithms that support effective <i>group</i> decision-making, with applications
+              like <i>ULTRA</i> that quickly help form research teams and match them with relevant funding
+              opportunities.
             </p>
           </div> <br>
 
@@ -80,16 +84,29 @@
               <b>Quick Start</b>
             </p>
             <ol style="margin: 0; padding-left: 18px; font-size: 13.5px; color: #333; line-height: 1.6;">
-              <li>See our latest work on <a href="http://3.133.159.191/">BEACON</a>, a personalized meal planning system to assist with making optimized meal choices over a time period, incorporating various food restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and long-term constraints to promote individual health and happines <a href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a><a href="http://3.133.159.191/">[Demo Website]</a></li>
+              <li>See our latest work on <a href="http://3.133.159.191/">BEACON</a>, a personalized meal planning system
+                to assist with making optimized meal choices over a time period, incorporating various food
+                restrictions, chronic health conditions, regional cuisine preferences, as well as balancing short- and
+                long-term constraints to promote individual health and happines <a
+                  href="https://arxiv.org/abs/2412.17910" target="_blank">[Paper]</a><a
+                  href="http://3.133.159.191/">[Demo Website]</a></li>
 
-              <li>See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers respond to RFPs from funding agencies. It has been awarded the Deployed Application Award by AAAI-IAAI 2024 and featured in AI Magazine 2024: 
-                <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank" style="color: #007acc; text-decoration: none;">[Paper]</a>
-                <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank" style="color: #007acc; text-decoration: none;">[Demo Website]</a>
+              <li><img id="myImg0" src="images/ultra_award.jpeg"
+                  alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
+                  style="width:100%;max-width:100px;height:50px;">
+                See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers
+                respond to RFPs from funding agencies. It has been awarded the <i>Deployed Application Award by
+                  AAAI-IAAI
+                  2024</i> and featured in AI Magazine 2024:
+                <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank"
+                  style="color: #007acc; text-decoration: none;">[Paper]</a>
+                <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"
+                  style="color: #007acc; text-decoration: none;">[Demo Website]</a>
               </li>
             </ol>
-          </div>     
-          
-  
+          </div>
+
+
           <div id="myModal" class="modal">
             <span class="close">&times;</span>
             <img class="modal-content" id="img01">
@@ -376,7 +393,8 @@
               </p>
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
-                <li>[2025] An empirical study on the use of Large Language Models (LLMs) to translate recipes into a semi-structured data format
+                <li>[2025] An empirical study on the use of Large Language Models (LLMs) to translate recipes into a
+                  semi-structured data format
                   <i>Conference Poster at the National Big Data and Health Science Conference</i><br>
                   <a href="./bib/Recipe-Translation-Poster.pdf" target="_blank" type="text/plain"><b>[Poster]</b></a>
                 </li>
