--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -95,9 +95,8 @@
                   alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
                   style="width:100%;max-width:100px;height:50px;">
                 See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers
-                respond to RFPs from funding agencies. It has been awarded the <i>Deployed Application Award by
-                  AAAI-IAAI
-                  2024</i> and featured in AI Magazine 2024:
+                respond to RFPs from funding agencies. It has been awarded the <i>Deployed Application Award</i> by
+                AAAI-IAAI 2024 and featured in AI Magazine 2024:
                 <a href="https://onlinelibrary.wiley.com/doi/pdf/10.1002/aaai.12203" target="_blank"
                   style="color: #007acc; text-decoration: none;">[Paper]</a>
                 <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"
