--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -92,7 +92,7 @@
                   href="http://3.133.159.191/">[Demo Website]</a></li>
 
               <li><img id="myImg0" src="images/ultra_award.jpeg"
-                  alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
+                  alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
                   style="width:100%;max-width:100px;height:50px;">
                 See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers
                 respond to RFPs from funding agencies. It has been awarded the <i>Deployed Application Award</i> by
