--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -93,7 +93,7 @@
 
               <li><img id="myImg0" src="images/ultra_award.jpeg"
                   alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
-                  style="width:100%;max-width:100px;height:50px;">
+                  style="width:100%;max-width:100px;height:62px;">
                 See our past work on ULTRA, a novel AI-based system for assisting team formation when researchers
                 respond to RFPs from funding agencies. It has been awarded the <i>Deployed Application Award</i> by
                 AAAI-IAAI 2024 <i>(can be enlarged on the right)</i> and featured in AI Magazine 2024:
@@ -140,12 +140,9 @@
                 information exploration
                 paradigm that retrieves interesting items for users based on their profiles and past
                 interactions/activities/history. Existing literature encourages using greedy methods, genetic and
-                heuristic
-                algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to
-                build
-                novel methods and useful tools for group recommendation with fairness, and drive different use cases
-                (e.g.,
-                meal recommendation). <br><br>
+                heuristic algorithms, topic diversification, and cost constraint bi-objective optimizations. Our
+                objective is to build novel methods and useful tools for group recommendation with fairness, and drive
+                different use cases (e.g., meal recommendation). <br><br>
                 <span style="color:violet"><i>The underlying research directions and applications are summarized in the
                     poster to the right (can be enlarged).</i></span>
               </p>
@@ -231,9 +228,11 @@
                   <br><br>
                 </li>
 
-                <li>[2024] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to
-                  Call
-                  for Proposals
+                <li><img id="myImg0" src="images/ultra_award.jpeg"
+                    alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
+                    style="width:100%;max-width:100px;height:60px;">[2024] Promoting Research Collaboration with Open
+                  Data Driven Team Recommendation in Response to
+                  Call for Proposals <b>[Awarded <i>Received Application Award</i> from AAAI-IAAI 2024]</b>
                   <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence
                     (IAAI-24)</i><br>
                   <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
