--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -232,7 +232,7 @@
                     alt="🎉 2024 AAAI-IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
                     style="width:100%;max-width:100px;height:60px;">[2024] Promoting Research Collaboration with Open
                   Data Driven Team Recommendation in Response to
-                  Call for Proposals <b>[Awarded <i>Received Application Award</i> from AAAI-IAAI 2024]</b>
+                  Call for Proposals <b>[Awarded <i>Deployed Application Award</i> from AAAI-IAAI 2024]</b>
                   <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence
                     (IAAI-24)</i><br>
                   <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
