--- a/publications/index.html
+++ b/publications/index.html
@@ -110,7 +110,7 @@
                                     Feb 2025</i><br>
                                 Biplav Srivastava
                                 <br>
-                                <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
+                                <a href='https://ojs.aaai.org/index.php/AAAI/article/view/35086'
                                     target="_blank">[Paper]</a>
                                 <a href="./presentations/AAAI-AIElectionVision-Feb2025.pdf" target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
@@ -127,7 +127,7 @@
                                 Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava,
                                 Lucas Vasconcelos
                                 <br>
-                                <a href='https://www.researchgate.net/publication/385590927_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data'
+                                <a href='https://ojs.aaai.org/index.php/AAAI/article/view/35260'
                                     target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Data Analysis</span>
