Adding Poster Thumbnail

--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -391,11 +391,16 @@
               </p>
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
-                <li>[2025] An empirical study on the use of Large Language Models (LLMs) to translate recipes into a
+                <li>
+                <img id="myImg1" src="images/Recipe-Translation-Picture.jpg"
+                  alt="Recipe Translation"
+                  style="width:100%;max-width:100px;height:120px;">[2025] An empirical study on the use of Large Language Models (LLMs) to translate recipes into a
                   semi-structured data format
                   <i>Conference Poster at the National Big Data and Health Science Conference</i><br>
                   <a href="./bib/Recipe-Translation-Poster.pdf" target="_blank" type="text/plain"><b>[Poster]</b></a>
                 </li>
+                <br>
+                <br>
                 <li>[2024] A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
                   Recommendations and Reasoning on Multimodal Recipes and its Implementation in BEACON<br>
                   <i>Arxiv Preprint</i><br>
